[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 18.0
margin_top = 3.0
margin_right = 140.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 107, 20 )
text = "Atividade"

[node name="add2" type="Button" parent="Label"]
margin_left = 180.0
margin_top = 256.0
margin_right = 242.0
margin_bottom = 276.0
text = "add"

[node name="Label2" type="Label" parent="."]
margin_left = 19.0
margin_top = 25.0
margin_right = 115.0
margin_bottom = 45.0
text = "Ex1"

[node name="Ex1" type="Label" parent="."]
margin_left = 20.0
margin_top = 40.0
margin_right = 107.0
margin_bottom = 54.0

[node name="Label3" type="Label" parent="."]
margin_left = 22.0
margin_top = 84.0
margin_right = 88.0
margin_bottom = 98.0
text = "Ex 2"

[node name="Ex2" type="Label" parent="."]
margin_left = 23.0
margin_top = 127.0
margin_right = 232.0
margin_bottom = 147.0

[node name="add" type="Button" parent="."]
margin_left = 164.0
margin_top = 66.0
margin_right = 243.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 79, 20 )
text = "add"

[node name="item" type="TextEdit" parent="."]
margin_left = 75.0
margin_top = 75.0
margin_right = 154.0
margin_bottom = 105.0

[node name="apagar" type="Button" parent="."]
margin_left = 166.0
margin_top = 91.0
margin_right = 242.0
margin_bottom = 111.0
text = "apagar"

[node name="Label4" type="Label" parent="."]
margin_left = 23.0
margin_top = 180.0
margin_right = 78.0
margin_bottom = 194.0
text = "Ex 3"

[node name="ex3" type="Label" parent="."]
margin_left = 23.0
margin_top = 197.0
margin_right = 98.0
margin_bottom = 211.0

[node name="Label5" type="Label" parent="."]
margin_left = 23.0
margin_top = 259.0
margin_right = 63.0
margin_bottom = 273.0
text = "Ex4"

[node name="ex4" type="Label" parent="."]
margin_left = 24.0
margin_top = 283.0
margin_right = 353.0
margin_bottom = 325.0

[node name="item2" type="TextEdit" parent="."]
margin_left = 81.0
margin_top = 258.0
margin_right = 191.0
margin_bottom = 279.0

[node name="Button2" type="Button" parent="."]
margin_left = 275.0
margin_top = 261.0
margin_right = 337.0
margin_bottom = 281.0
text = "apagar"

[connection signal="pressed" from="Label/add2" to="." method="_on_add2_pressed"]
[connection signal="pressed" from="add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="apagar" to="." method="_on_apagar_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
